[package]
name = "adv-shift-registers"
authors = ["filipton <filipton12@gmail.com>"]
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Advanced shift registers control (for multiple chained shift-registers)"
repository = "https://github.com/filipton/adv-shift-registers"

[lib]

[dependencies]
embedded-hal = "1.0.0"
log = "0.4.22"
